# django-view-utils

./: .gitignore  .pre-commit-config.yaml  README.md  noxfile.py  pyproject.toml  tox.ini
.github/workflows/: test.yml
django_view_utils/: __init__.py  apps.py  conf.py  decorators.py  urls.py  urls_utils.py  utils.py
django_view_utils/generic/: enums.py  list.py
django_view_utils/templates/generic/: list.html
docs/: conf.py  index.rst
tests/: settings.py  some_views.py  test_decorator.py  test_generic_list.py  urls.py  views.py
tests/test_app/: models.py  views.py
tests/test_app/migrations/: 0001_initial.py
