[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-view-utils"
description = ''
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "Víðir Valberg Guðmundsson", email = "valberg@orn.li" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "django-zen-queries>=2.1"
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/unknown/django-view-utils#readme"
Issues = "https://github.com/unknown/django-view-utils/issues"
Source = "https://github.com/unknown/django-view-utils"

[tool.hatch.version]
path = "django_view_utils/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=django_view_utils --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE="tests.settings"
#addopts = "--reuse-db --cov"
addopts = "--reuse-db"
norecursedirs = "build dist docs .eggs/* *.egg-info htmlcov django_view_utils .git .nox"
python_files = "test*.py"
testpaths = "tests"
pythonpath = ". src"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "django_view_utils/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
